src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Cases for Subscription Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Void</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Change of Subscription</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Void</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Change%2FReset Password</fullName>
        <isActive>false</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Void</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Complaint - Digital</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Void</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Complaint- Magazine</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Void</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Complaint- Newspaper</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Void</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>New Cases from Email Assigned to Enquiry Record Type</fullName>
        <description>New Cases created from Email will be Assigned to Enquiry Record Type</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Void</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Renewal of Subscription</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Void</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Retention Outbound</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Void</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AccountIdHidden__c</fullName>
        <formula>AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountIdHidden</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <formula>Account.RecordType.Name</formula>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Sub_Group__c</fullName>
        <formula>TEXT(Account.Sub_Group__c)</formula>
        <label>Account Sub Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account field that is not read-only to be used in Adjustment Case. Field Value will be copied into Account Standard field and will not be exposed in detail page layout.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Account) (Do Not Use)</relationshipLabel>
        <relationshipName>Cases_Do_Not_Use</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Type__c</fullName>
        <description>Read-only field. Will be populated based from indicator on Order Form.</description>
        <label>Action Type</label>
        <picklist>
            <picklistValues>
                <fullName>Amend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stop Start</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Actual_Approver_Name__c</fullName>
        <label>Actual Approver Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_On_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offer Add On Package</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Package__c.Package_Type__c</field>
                <operation>equals</operation>
                <value>Add On</value>
            </filterItems>
            <filterItems>
                <field>Package__c.Eligible_Product_Family_for_Add_On_Pack__c</field>
                <operation>contains</operation>
                <valueField>$Source.Offer_Package_Product_Family__c</valueField>
            </filterItems>
            <filterItems>
                <field>Package__c.Eligible_Product_Family_for_Add_On_Pack__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Package__c</referenceTo>
        <relationshipLabel>Cases (Offer Add On Package)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Termination_Comments__c</fullName>
        <label>Additional Termination Comments</label>
        <length>3400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Adjustment_Amount__c</fullName>
        <inlineHelpText>Please provide a Positive Value for Adjustment Amount</inlineHelpText>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adjustment_Status__c</fullName>
        <label>Adjustment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Admin_Charges__c</fullName>
        <description>Auto-populated based from the Admin Charge field captured in Order form.</description>
        <label>Admin Charges</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Admin_Remarks__c</fullName>
        <label>Admin Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <description>Age of Case in days from creation date up to closure date (for Closed Cases) or current date (for Open Cases)</description>
        <formula>IF(ISBLANK(ClosedDate),NOW()-CreatedDate,ClosedDate-CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_To_Refund__c</fullName>
        <label>Amount To Refund</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Process_Submission_Date__c</fullName>
        <label>Approval Process Submission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approval_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_Refund__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved Refund</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attention_To_Care_Of_Indicator__c</fullName>
        <label>Attention To/Care Of Indicator</label>
        <picklist>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attention_To_Care_Of_Salutation__c</fullName>
        <label>Attention To/Care Of Salutation</label>
        <picklist>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASST</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Balance_Amount__c</fullName>
        <formula>Amount_To_Refund__c - Admin_Charges__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Account_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Billing Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3)</booleanFilter>
            <filterItems>
                <field>Zuora__CustomerAccount__c.Zuora__Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <filterItems>
                <field>Zuora__CustomerAccount__c.Zuora__Account__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Zuora__CustomerAccount__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CASE_Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <label>CASE Legacy Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>COA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for D-1947</description>
        <label>COA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COCC_ContactPhoneEmail__c</fullName>
        <formula>Contact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COCC_ContactPhone__c</fullName>
        <formula>Contact.HomePhone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSO_Remarks__c</fullName>
        <label>CSO Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Out_Response__c</fullName>
        <label>Call Out Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Refund_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will Check if refund is successful</description>
        <label>Case Refund Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Sub_Status__c</fullName>
        <label>Case Sub Status</label>
        <picklist>
            <picklistValues>
                <fullName>Case Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Urgent Temp Stop/Restart Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temp Stop Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temp Stop Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Team_Member_IDs__c</fullName>
        <description>Custom field to capture IDs of Team Members that were added to the case.</description>
        <label>Case Team Member IDs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Collection/Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscription Enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscription Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stop Subscription</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Change_of_Address_Type__c</fullName>
        <label>Change of Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Change of Billing address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Billing and Delivery Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Delivery Address - Local to Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Delivery Address - Local to Overseas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Delivery Address - Overseas to Overseas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Delivery Address - Overseas to Local</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Charge_Status__c</fullName>
        <label>Charge Status</label>
        <picklist>
            <picklistValues>
                <fullName>Do Not Charge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Charges_Waived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Read-only field. Will be updated based from Waiving of Charges approval.</description>
        <label>Charges Waived?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charging_Date__c</fullName>
        <label>Reminder Date to Recharge</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_Goodwill_Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Renders TRUE if Goodwill Amount is not null.</description>
        <label>Check Goodwill Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Complaint_Code__c</fullName>
        <label>Complaint Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint_Period_From_Date__c</fullName>
        <label>Complaint Period From Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Complaint_Period_To_Date__c</fullName>
        <label>Complaint Period To Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Complaint_Pub_Code__c</fullName>
        <label>Complaint Pub Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Address__c</fullName>
        <formula>Contact.Contact_Address_Detail__c</formula>
        <label>Contact Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Mobile__c</fullName>
        <label>Contact Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Name_Formula__c</fullName>
        <formula>ContactId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <label>Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_To_Update__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact To Update</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Contact To Update)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Courier_Fee__c</fullName>
        <label>Courier Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Create_Follow_Up_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Follow Up Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Creation_Mode__c</fullName>
        <label>Creation Mode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creation_Mode_del__c</fullName>
        <label>Creation Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telemarketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walk-in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Creation_Mode_picklist__c</fullName>
        <label>Creation Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telemarketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walk-in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CreditExtension_Code__c</fullName>
        <label>CreditExtension Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditExtension_From_Date__c</fullName>
        <label>CreditExtension From Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CreditExtension_To_Date__c</fullName>
        <label>CreditExtension To Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Credit_Amount_Rollup__c</fullName>
        <label>Credit Amount Rollup</label>
        <summarizedField>Case_Subscription__c.Credit_Amount__c</summarizedField>
        <summaryForeignKey>Case_Subscription__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Credit_Amount__c</fullName>
        <label>Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Balance__c</fullName>
        <label>Credit Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Note_Number__c</fullName>
        <label>Credit Note Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Note_Reason_Code__c</fullName>
        <inlineHelpText>To be selected for Refunds where mode is Invoice</inlineHelpText>
        <label>Credit Note Reason Code</label>
        <picklist>
            <picklistValues>
                <fullName>S1-Change of publication/quantity/frequency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S2-Delivery issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S3-Delivery fee adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S4-GST amount dispute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S5-Wrong billing party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S6-Wrong billing details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S7-Waive administrative/cancellation fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S8-Goodwill waiver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S9-Other billing adjustments</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Date_for_Year_To_Date__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Date for Year To Date</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Payment_Mode__c</fullName>
        <label>Current Payment Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GIRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Confidentiality__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Confidentiality</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_No__c</fullName>
        <label>Customer Contact No.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_name__c</fullName>
        <description>Name of Customer</description>
        <label>Customer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <description>Status closed date for notification purposes</description>
        <formula>IF(ISPICKVAL( Status, &apos;Closed&apos;) ,  TODAY(), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Replaced__c</fullName>
        <label>Date Replaced</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Device_Code__c</fullName>
        <label>Device Code</label>
        <picklist>
            <picklistValues>
                <fullName>Any Type</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DuplicateEffectiveDate__c</fullName>
        <formula>TEXT( Effective_Date__c ) +  TEXT( Change_of_Address_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DuplicateEffectiveDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Earliest_Stop_Date__c</fullName>
        <label>Earliest Stop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eligible_for_Retention_Offer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligible for Retention Offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Message_Counter_2__c</fullName>
        <description>for case closed notification purpose</description>
        <formula>Email_Message_Counter__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Message Counter 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Message_Counter__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Email Message Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_to_Case_Address__c</fullName>
        <label>Email to Case Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this is the indicator for cases with follow up</description>
        <label>Follow Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Generate_Arms_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Arms Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Goodwill_Amount_Newspaper__c</fullName>
        <description>This is the value of the Goodwill Amount in Case Subscription Object.</description>
        <label>Goodwill Amount</label>
        <summarizedField>Case_Subscription__c.Goodwill_Amount__c</summarizedField>
        <summaryForeignKey>Case_Subscription__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Goodwill_Amount__c</fullName>
        <label>Goodwill Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Goodwill_Approval_Status__c</fullName>
        <label>Goodwill Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Goodwill_Approver__c</fullName>
        <description>Using this field to update the Actual Approver for Crediting Report</description>
        <label>Goodwill Approver</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goodwill_Copies__c</fullName>
        <label>Goodwill Copies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InternalAddress__c</fullName>
        <label>InternalAddress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invalid_Complaint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invalid Complaint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Invoice</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Zuora__ZInvoice__c.Zuora__Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Zuora__ZInvoice__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsEOMCycle__c</fullName>
        <formula>IF( Today() &lt;= 
IF(
  MONTH( TODAY()) = 12,
  DATE( YEAR( TODAY() ), 12, 31 ),
  DATE( YEAR( TODAY() ), MONTH ( TODAY() ) + 1, 1 ) - 1 )
&amp;&amp; 
Today() &gt;
IF(
  MONTH( TODAY()) = 12,
  DATE( YEAR( TODAY() ), 12, (31 - $Setup.Days_Before_EOM__c.Number_Of_Days__c) ),
  DATE( YEAR( TODAY() ), MONTH ( TODAY() ) + 1, 1 ) - ($Setup.Days_Before_EOM__c.Number_Of_Days__c +1) ),True, False)</formula>
        <label>IsEOMCycle?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsHiddenFromCSO__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsHiddenFromCSO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Justification_for_Reclassification__c</fullName>
        <label>Justification for Reclassification</label>
        <type>TextArea</type>
    </fields>
</CustomObject>